<resources>
    <string name="app_name">MyApp</string>
    <string name="title_home">首页</string>
    <string name="title_notifications">邻里</string>
    <string name="title_event">活动</string>
    <string name="title_my">我的</string>

    <string name="tips_phone">请输入正确的手机号</string>

    <string name="txt_login_phone_tips">请输入手机号码</string>
    <string name="txt_login_unregister_tips">未注册的用户将直接创建账户</string>
    <string name="txt_login_getverify">获取短信验证码</string>
    <string name="txt_login_other">其他方式登录</string>
    <string name="txt_login_phone_hint">请输入手机号</string>
    <string name="txt_login_pw_hint">请输入密码</string>
    <string name="txt_login_forgetpw">忘记密码</string>
    <string name="txt_login_ok">登录</string>

    <string name="txt_input_verify">输入验证码</string>
    <string name="tips_phone_sendverify">验证码发送至+86  $</string>
    <string name="txt_getverifiy">重新获取验证码</string>
    <string name="txt_login_xieyi">登录注册表示同意《中粮智慧社区协议》</string>
    <string name="txt_return">返回</string>
</resources>
